--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rollup-ts-library-boilerplate",
-  "version": "1.0.3",
+  "name": "@omnitech/lodash-ext",
+  "version": "1.0.4",
   "description": "A library template writing by ts",
   "main": "dist/index.umd.js",
   "module": "dist/index.es5.js",
@@ -19,7 +19,7 @@
     "start": "rollup -c rollup.config.js -w",
     "docs": "typedoc --out docs --theme minimal src",
     "prebuild": "rimraf dist",
-    "build": "rollup -c rollup.config.js",
+    "build": "rollup -c rollup.config.js --bundleConfigAsCjs",
     "release": "npm run release:patch",
     "release:patch": "npm run build && standard-version --release-as patch",
     "release:minor": "npm run build && standard-version --release-as minor",
@@ -43,37 +43,42 @@
   ],
   "author": "x-cold <lxstart@outlook.com>",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "lodash": "^4.0.0"
+  },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.0",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.0",
-    "eslint-config-airbnb-typescript": "^15.0.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "@babel/preset-env": "^7.20.2",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.27.0",
-    "husky": "^7.0.2",
-    "jest": "^27.1.0",
-    "lint-staged": "^11.1.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.56.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.1.2",
+    "rimraf": "^4.3.1",
+    "rollup": "^3.18.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "standard-version": "^9.3.1",
-    "ts-jest": "^27.0.5",
-    "typedoc": "^0.21.9",
-    "typescript": "^4.4.2"
+    "rollup-plugin-typescript2": "^0.34.1",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.0.5",
+    "typedoc": "^0.23.26"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
