--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@omnitech/lodash-ext",
+  "name": "lodash-ext",
+  "private": false,
   "version": "0.0.1",
   "description": "A library template writing by ts",
   "main": "dist/index.umd.js",
@@ -24,15 +25,17 @@
     "release:patch": "npm run build && standard-version --release-as patch",
     "release:minor": "npm run build && standard-version --release-as minor",
     "release:major": "npm run build && standard-version --release-as major",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
+    "jest": "npx jest --testTimeout 3000 --cache  --colors",
+    "test": "yarn run jest --coverage",
+    "test:watch": "yarn run jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy": "rimraf docs/ && npm run docs"
+    "deploy": "rimraf docs/ && npm run docs",
+    "prettier": "prettier --config prettier.config.js --cache --cache-strategy metadata src/**/*.ts"
   },
   "lint-staged": {
     "src/**/*.ts": [
-      "npm run lint:fix",
-      "git add"
+      "yarn run prettier --write",
+      "yarn run lint:fix"
     ]
   },
   "keywords": [
@@ -56,11 +59,14 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@rollup/plugin-babel": "^5.3.1",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.35.0",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-eslint-plugin": "^5.0.8",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-node": "^11.1.0",
@@ -69,6 +75,7 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "rimraf": "^4.3.1",
     "rollup": "^3.18.0",
     "rollup-plugin-commonjs": "^10.1.0",
