--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lodash-ext",
+  "name": "@oc-tech/lodash-ext",
   "private": false,
   "version": "0.0.1",
   "description": "A library template writing by ts",
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:omnitech-solutions/lodash-ext.git"
+    "url": "git+ssh://git@github.com/omnitech-solutions/lodash-ext.git"
   },
   "scripts": {
     "prepare": "rm -rf .husky/_ && husky install",
@@ -45,8 +45,11 @@
     "boilerplate"
   ],
   "author": "x-cold <lxstart@outlook.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "@types/dot-object": "^2.1.2",
+    "deep-object-diff": "^1.1.9",
+    "dot-object": "^2.1.4",
     "lodash": "^4.17.21",
     "typescript": "^4.9.5"
   },
@@ -57,6 +60,7 @@
     "@babel/preset-env": "^7.20.2",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@optimize-lodash/rollup-plugin": "^4.0.3",
     "@rollup/plugin-babel": "^5.3.1",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
@@ -89,5 +93,12 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "bugs": {
+    "url": "https://github.com/omnitech-solutions/lodash-ext/issues"
+  },
+  "homepage": "https://github.com/omnitech-solutions/lodash-ext#readme",
+  "directories": {
+    "test": "test"
   }
 }
