--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@oc-tech/lodash-ext",
   "private": false,
-  "version": "0.0.1",
-  "description": "A library template writing by ts",
+  "version": "0.0.2",
+  "description": "Enhances lodash experience catering for real world functionality",
   "main": "dist/index.umd.js",
   "module": "dist/index.es5.js",
   "typings": "dist/types/index.d.ts",
@@ -39,17 +39,18 @@
     ]
   },
   "keywords": [
-    "rollup",
-    "typescript",
+    "lodash",
     "library",
-    "boilerplate"
+    "typescript",
+    "rollup"
   ],
-  "author": "x-cold <lxstart@outlook.com>",
+  "author": "Desmond O'Leary <desoleary@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@types/dot-object": "^2.1.2",
     "deep-object-diff": "^1.1.9",
     "dot-object": "^2.1.4",
+    "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
     "typescript": "^4.9.5"
   },
