--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oc-tech/lodash-ext",
   "private": false,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Enhances lodash experience catering for real world functionality",
   "main": "dist/index.umd.js",
   "module": "dist/index.es5.js",
@@ -47,11 +47,15 @@
   "author": "Desmond O'Leary <desoleary@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/bignumber.js": "^5.0.0",
     "@types/dot-object": "^2.1.2",
+    "@types/numeral": "^2.0.2",
+    "bignumber.js": "^9.1.1",
     "deep-object-diff": "^1.1.9",
     "dot-object": "^2.1.4",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
