--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "ES2017",
-    "module": "ES2015",
+    "target": "ES2020",
+    "module": "ES2020",
     "lib": [
       "es2015",
       "es2016",
       "es2017",
+      "ES2020",
       "dom"
     ],
+    "esModuleInterop": true,
     "strict": true,
     "sourceMap": true,
     "declaration": true,
