--- a/.eslintrc
+++ b/.eslintrc
@@ -10,16 +10,52 @@
   ],
   "plugins": [
     "@typescript-eslint",
-    "react"
+    "react",
+    "chai-friendly",
+    "jest",
+    "promise",
+    "import"
   ],
+  "settings": {
+    "jest": {
+      "globalAliases": {
+        "describe": [
+          "context"
+        ],
+        "xdescribe": [
+          "xcontext"
+        ]
+      }
+    }
+  },
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "node": true,
+    "es6": true,
+    "jest": true
+  },
+  "globals": {
+    "jest/globals": true,
+    "context": true,
+    "sinon": true
+  },
   "overrides": [
+    {
+      "files": ["*.test.ts"],
+      "rules": {
+        "@typescript-eslint/no-unused-expressions": "off"
+      }
+    },
     {
       "files": [
         "*.ts",
         "*.tsx"
-      ], // Your TypeScript files extension
+      ],
       "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.json",
+        "extends": ["plugin:jest/recommended"],
+        "rules": { "jest/prefer-expect-assertions": "off" }
       }
     }
   ],
@@ -30,6 +66,30 @@
       "off",
       1
     ],
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/imports-first": 0,
+    "import/newline-after-import": 0,
+    "import/no-dynamic-require": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "import/no-webpack-loader-syntax": 0,
+    "import/prefer-default-export": 0,
+    "import/named": 0,
+    "import/no-cycle": [
+      2,
+      {
+        "maxDepth": 1
+      }
+    ],
+    "indent": [
+      2,
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "jest/valid-expect": 0,
+    "jest/no-identical-title": 0,
+    "chai-friendly/no-unused-expressions": 2
   }
 }
