--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "ES2020",
-    "module": "ES2020",
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "lib": [
       "es2015",
       "es2016",
@@ -10,7 +11,7 @@
       "ES2020",
       "dom"
     ],
-    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "strict": true,
     "sourceMap": true,
     "declaration": true,
